```mermaid
classDiagram
    class Customer {
        -Long id
        -String name
        -String address
        -String phone
        -String email
        +placeOrder(List~MenuItem~ items) Order
        +rateDriver(Driver driver, int score) void
        +getOrderHistory() List~Order~
    }
    
    class Order {
        -Long orderId
        -Long customerId
        -Long driverId
        -List~MenuItem~ items
        -OrderStatus status
        -double totalAmount
        -DateTime orderTime
        +addItem(MenuItem item) void
        +removeItem(MenuItem item) void
        +calculateTotal() double
        +updateStatus(OrderStatus status) void
    }
    
    class Driver {
        -Long id
        -String name
        -String vehicle
        -String licenseNumber
        -Location currentLocation
        -RatingsHandler ratings
        +acceptOrder(Order order) void
        +completeDelivery(Order order) void
        +getAverageRating() double
    }
    
    class MenuItem {
        -Long id
        -String name
        -String description
        -double price
        -String category
        -int preparationTime
        +updatePrice(double price) void
        +isAvailable() boolean
        +getDetails() String
    }
    
    class Rating {
        -Long id
        -Long customerId
        -Long driverId
        -int score
        -String comment
        -DateTime timestamp
        +validate() boolean
        +getRatingDetails() String
    }

    class OrderStatus {
        <<enumeration>>
        PLACED
        ACCEPTED
        IN_DELIVERY
        DELIVERED
    }

    class Payment {
        -Long paymentId
        -Long orderId
        -String paymentMethod
        -double amount
        -DateTime paymentTime
        +processPayment() boolean
        +refundPayment() boolean
    }

    Customer "1" --> "*" Order : places
    Order "*" --> "*" MenuItem : contains
    Driver "1" --> "*" Order : accepts
    Customer "1" --> "*" Rating : gives
    Driver "1" --> "*" Rating : receives
    Order --> OrderStatus : has
    Order "1" --> "1" Payment : includes
```